# personapath-v2

./: .replit  api_main.py  api_test.py  app.py  combined_app.py  main.py  personapath.db  populate_roles.py  proxy_handler.py  pyproject.toml  replit.md  streamlit_server.py  styles.py  test_api.py  unified_server.py
.streamlit/: config.toml
attached_assets/: Pasted--PersonaPath-Personalized-Internal-Career-Intelligence-Mentorship-Assistant-Using-simple-e-1754423452824_1754423452829.txt  Pasted--User-context-memory-Testing-Quality-Assurance-Unit-tests-for-backend-APIs-Retrieval-QA--1754409254149_1754409254150.txt  Pasted--workspace-uvicorn-api-main-app-host-0-0-0-0-port-8000-reload-uvicorn-command-not-installe-1754416864342_1754416864343.txt  Pasted--workspace-uvicorn-main-app-host-0-0-0-0-port-5000-reload-INFO-Will-watch-for-changes-i-1754417424573_1754417424577.txt  Pasted--workspace-uvicorn-main-app-host-0-0-0-0-port-5000-reload-INFO-Will-watch-for-changes-i-1754417504717_1754417504718.txt  Pasted-AttributeError-DatabaseManager-object-has-no-attribute-get-role-by-title-Traceback-File-ho-1754463025359_1754463025360.txt  Pasted-How-to-switch-from-cashier-to-software-developer-Cashier-Complete-Role-Information-Depart-1754459352430_1754459352431.txt  Pasted-Product-Requirements-Document-PRD-Project-Title-PersonaPath-Personalized-Internal-Caree-1754383011214_1754383011215.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-main-py-line-5-in-module--1754417123252_1754417123254.txt  (+5 more)
core/: auth.py  auth_pg.py  career_planner.py  database.py  (+8 more)
(+4 files in other folders)
